3.7.1
Fixed bug: str_pos errors appear when custom feed url is left empty.
Fuxed bug: Some options were producing undefined index errors.

3.7 (2013-11-28)
New Feature: State system - Feed sources can be activated/paused.
New Feature: State system - Feed sources can be set to activate or pause themselves at a specific date and time.
Enhanced: Added compatibility with nested outline elements in OPML files.
Enhanced: Admin menu icon image will change into a Dashicon, when WordPress is updated to 3.8 (Decemeber 2013).
Fixed bug: Custom Post types were breaking when the plugin is activated.

3.6.1 (2013-11-17)
Fixed bug: Missing 2nd argument for wprss_shorten_title()

3.6 (2013-11-16)
New Feature: Can set the maximum length for titles. Long titles get trimmed.
Fixed bug: Fixed errors with undefined indexes for unchecked checkboxes in the settings page.
Fixed bug: Pagination on front static page was not working.

3.5.2 (2013-11-11)
Fixed bug: Invalid feed source url was producing an Undefined method notice.
Fixed bug: Custom feed was producing a 404 page.
Fixed bug: Presstrends code firing on admin_init, opt-in implementation coming soon

3.5.1 (2013-11-09)
Enhanced: Increased compatibility with RSS sources.
Fixed bug: Pagination not working on home page

3.5 (2013-11-6)
New Feature: Can delete feed items for a particular source
Enhanced: the 'Fetch feed items' row action for feed sources resets itself after 3.5 seconds.
Enhanced: The feed image is saved for each url.
Fixed bug: Link to source now links to correct url. Previously linked to site's feed.

3.4.6 (2013-11-1)
Enhanced: Added more hooks to debugging page for the Feed to Post add-on.
Fixed bug: Uninitialized loop index

3.4.5 (2013-10-30)
Bug Fix: Feed items were not being imported while the WPML plugin was active.

3.4.4 (2013-10-26)
New feature: Pagination
New feature: First implementation of editor button for easy shortcode creation
Enhanced: Feed items and sources don't show up in link manager